# sdl_gpu_kit

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt
dev/: CMakeLists.txt  build.sh
dev/src/: main.cpp
dev/src/camera_controller/: camera_controller.cpp  camera_controller.h
src/: camera.h  default_runner.cpp  default_runner.h  frustum.h  main.cpp  mesh.h
src/animation/: animation.cpp  animation.h  animator.cpp  animator.h  bone.cpp  bone.h
src/assets/models/: quad.glb
src/input_manager/: input_manager.cpp  input_manager.h
src/post_process/: post_process.cpp  post_process.h  screen_mask.h
src/render_manager/: pbr_manager.cpp  pbr_manager.h  render_manager.cpp  render_manager.h
src/resource_manager/: dds_loader.h  renderable_model.cpp  renderable_model.h  resource_manager.cpp  resource_manager.h
src/shaders/: bilateral_blur.frag  brdf.frag  constants.glsl  cube.vert  depth_copy.frag  depth_resolve.frag  downsample.frag  fog.fs  fullscreen.vert  gtao.frag  hdr_to_cube.frag  irradiance.frag  oit_composite.frag  pbr.frag  pbr.fs  pbr.vert  pbr_oit.frag  pbr_skinned.vert  phong.frag  phong.vert  post.frag  prefilter.frag  quad.vert  shadow_csm.frag  shadow_csm.vert  shadow_csm_skinned.vert  shadowing.fs  simple.frag  simple.vert  skybox.frag  skybox_procedural.frag  smaa_blend.frag  smaa_edge.frag  smaa_neighbor.frag  ssao_blur.frag  upsample.frag
src/shadow_manager/: shadow_manager.cpp  shadow_manager.h
src/ui/: base_ui.h  root_ui.cpp  root_ui.h
src/ui/system_monitor/: system_monitor_ui.cpp  system_monitor_ui.h
src/update_manager/: update_manager.h
src/utils/: common.h  utils.cpp  utils.h
